class-management-lecturer-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lecturer-deployment
  labels:
    app: class-management-lecturer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: class-management-lecturer-service
  template:
    metadata:
      labels:
        app: class-management-lecturer-service
    spec:
      containers:
        - name: class-management-lecturer-service-container
          image: th1enlm02/class-management-lecturer-service:latest
          ports:
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lecturer-mongodb-deployment
  labels:
    app: lecturer-service-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lecturer-service-mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lecturer-service-mongodb
    spec:
      containers:
        - name: lecturer-service-mongodb-container
          image: mongo:7.0.9
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: lecturer-service-mongodb-data
              mountPath: /data/db
          livenessProbe:
            exec:
              command:
                - mongosh
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - mongosh
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: lecturer-service-mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lecturer-mongo-express-deployment
  labels:
    app: lecturer-service-mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lecturer-service-mongo-express
  template:
    metadata:
      labels:
        app: lecturer-service-mongo-express
    spec:
      containers:
        - name: lecturer-service-mongo-express-container
          image: mongo-express:1-20
          ports:
            - containerPort: 8081
