class-management-lecturer-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lecturer-service
spec:
  selector:
    app: class-management-lecturer-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: lecturer-service-mongodb
spec:
  selector:
    app: lecturer-service-mongodb
  ports:
    - port: 27017
      targetPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: lecturer-mongo-express
spec:
  selector:
    app: lecturer-mongo-express
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30881
