class-management-lecturer-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lecturer-service-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /lecturer
          pathType: Prefix
          backend:
            service:
              name: lecturer-service
              port:
                number: 5000
